1200856173	Fehler behoben: automatisch gelöschte Benutzer kamen teilweise noch in den Highscores vor.
1200856110	Neue Skin-Option: Rohstoffmangel wird rot markiert.
1200856098	Vergleich der aktuellen mit den usprünglichen Werten in den Schiffs- und Verteidigungseigenschaften.
1200855993	Buttons, um auf den nächsten und vorigen Planeten zu gelangen.
1200855964	Anzeige der vorhandenen Rohstoffe, Roboter und Schiffe beim Flottenversand, beim Klick werden diese in die Felder eingefügt.
1199654057	E-Mail-Benachrichtigungen werden automatisch signiert und lassen sich auf Wunsch verschlüsseln.
1199653778	Einstellung „Erweiterte Gebäudeansicht“: Der Produktionsunterschied zur nächsten Stufe wird angezeigt.
1199653744	Neue Farbvarianten des Standardskins: Schwarz und Grün. Schwarz ist das neue Standarddesign. Die Werbung passt sich nun den Farben des Skins an.
1199653700	Skins lassen sich jetzt konfigurieren.
1199653657	In den Gegenstandsinformationen werden die nicht erfüllten Abhängigkeiten angezeigt, inklusive der Abhängigkeiten der Abhängigkeiten usw.
1199653593	Eine E-Mail-Adressänderung tritt erst nach 7 Tagen in Kraft.
1199653547	Neue Berechnungsformel der Ingenieurswissenschaft.
1199653528	Neue Berechnungsformel der Roboterbautechnik.
1199653476	Neue Versionsnummer: 1.1.0 dev
1187387231	Veränderung der Berechnung der Flottenslots: Bei der Berechnung wird jetzt aufgerundet.
1187304474	Fremdstationierung ist jetzt möglich.
1181156373	Darstellungsfehler im Internet Explorer behoben.
1181156345	Teilstatistiken in den Highscores eingeführt für Gebäude-, Forschungs-, Roboter-, Flotten-, Verteidigungs- und Flug- und Kampferfahrungspunkte.
1181156287	Flottenverbände eingeführt.
1181156259	Handelsbörse eingeführt, Handelsrechner wird überflüssig.
1171053135	Neue Versionsnummer: 1.0.3
1171053133	Wichtiger Sicherheitspatch zwecks der Besiedelung bestimmter nicht existierender Planeten.
1150741112	Neue Versionsnummer: 1.0.2