@@ -1,3 +1,5 @@
+1202351434	Handelsfunktion ergänzt: Transporte müssen die Rohstoffe nicht abliefern, sodass mithilfe von Flugrouten Rohstoffe von mehreren Planeten eingesammelt werden können.
+1202351389	Flugrouten eingebaut: Flotten können von einem Ziel zum nächsten weiterfliegen.
 1200856173	Fehler behoben: automatisch gelöschte Benutzer kamen teilweise noch in den Highscores vor.
 1200856110	Neue Skin-Option: Rohstoffmangel wird rot markiert.
 1200856098	Vergleich der aktuellen mit den usprünglichen Werten in den Schiffs- und Verteidigungseigenschaften.
